# bellmancapital

./: .gitignore  README.md  agent.py  conftest.py  pyproject.toml
configs/: default.yaml
notebooks/: eda.ipynb
src/: base.py  baselines.py  data.py  env.py  metrics.py
tests/: test_submission.py
