[project]
name = "bellman-capital"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29",
    "torch>=2.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "requests>=2.31",
    "tqdm>=4.66",
    "pyarrow>=15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
